# python_staff

./: .gitignore  11_count_imt.py  12_cycles.py  2_funt.py  3_format_example.py  README.md  ex7.py  ex8.py  ex9.py  python_tips.py  python_tips.py~  python_tips_fin.py  vimrc
10_boostrap/: README.md
11_pygame/: 3_polki.py  README
11_pygame/2_lodka/: 3_polki.py  4_polki.py  game_my.py  graphic.py  linting.ini  linting.utf8.ini  lodka_game.py  pre-commit.sh  pyproject.toml  ships_and_enemies_classes.py
11_pygame/2_lodka/RUBISH_CODE/: music_example.py
11_pygame/2_lodka/music/: alarm.mp3.mpg  sonar.mp3.mpg  sonar2.mp3.mpg
11_pygame/2_lodka/old_images_bak/: bg.xcf  submarine_no_fone.xcf  submarine_no_fone_flag_clean.xcf
12_vk_url/: url_convert.py
13_django_molchanov/: django_tips.py
14_LIVECODING/: check_or.py  questions_livecoding.txt
14_codewars/: 10_duplicate_words.py  13_two_fighters_one_winner.py  14_Testing_1_2_3.py  15_Disemvowel_Trolls.py  18_adam_eve.py  1_playing_with_digits.py  20_is_the_string_uppercase_OOP_WAY.py  23_Color_Ghost.py  24_Building_blocks.py  26_Refactored_greeting.py  27_makeBackronym.py  29_Interactive_Dictionary.py  2_who_has_most_money.py  33_Person_Class_Bug.py  34_Bingo_Card.py  36_Image_host_filename_generator.py  37_list_reverse.py  38_PatternCraft_Starcraft_tank.py  39_User_Banking_System.py  40_New_Pokedex_prototype.py  41_List_to_Array.py  42_Linked_Lists.py  42_Remove_space.py  43_Make_them_bark.py  44_Get_Full_Name.py  45_Ordered_Count_of_Characters.py  46_The_Enigma_Machine_1.py  47_Simple_Substitution_Cipher.py  (+13 more)
(+319 files in other folders)
